--- a/client/src/App.css
+++ b/client/src/App.css
@@ -42,7 +42,7 @@ body {
 
 #inputfield {
   height: 80px;
-  width: 90%;
+  width: 66%;
   flex: 1;
   padding-left: 20px;
   font-size: xx-large;
@@ -57,6 +57,9 @@ body {
   outline-style: solid;
   outline-width: 2px;
   outline-color: rgb(84, 98, 203);
+}
+
+.random-button {
 }
 
 /*BODY PANEL*/
