--- a/client/src/App.css
+++ b/client/src/App.css
@@ -35,21 +35,21 @@ body {
 
 #inputfield-container {
   text-align: center;
-  flex: 0 0 85px;
+  display: flex;
+  flex-direction: row;
+  height: 50px;
   margin: 20px;
   padding: 3px;
 }
 
 #inputfield {
-  height: 80px;
   width: 66%;
   flex: 1;
+  margin-left: 35px;
   padding-left: 20px;
   font-size: xx-large;
-  justify-content: center;
   border-color: black;
   border-radius: 20px;
-  outline: none;
 }
 
 #inputfield:focus {
@@ -60,6 +60,8 @@ body {
 }
 
 .random-button {
+  margin: auto;
+  min-width: 35px; /* flex-bases didn't work as expected. TODO: find out why */
 }
 
 /*BODY PANEL*/
@@ -121,7 +123,6 @@ body {
   font-size: xx-large;
   text-align: center;
   cursor: default;
-  text-justify: center;
 }
 
 .ingredient.bold {
