--- a/client/src/App.css
+++ b/client/src/App.css
@@ -287,6 +287,7 @@ li {
   border-color: black;
   border-width: var(--inputfield-border-width);
   border-radius: 20px;
+  text-transform: lowercase;
 }
 
 #inputfield-container:focus-within #inputfield {
