--- a/client/src/App.css
+++ b/client/src/App.css
@@ -694,6 +694,7 @@ li {
   width: auto;
 }
 
+/*TODO: remove this if it didn't work*/
 @media only screen and (min-device-width: 320px) and (max-device-width: 1024px) and (-webkit-min-device-pixel-ratio: 1) {
   #inputfield {
     flex: 4;
