--- a/client/src/App.css
+++ b/client/src/App.css
@@ -290,12 +290,14 @@ li {
   border-radius: 20px;
   text-transform: lowercase;
   -webkit-appearance: none;
+  appearance: auto;
 }
 
 #inputfield-container:focus-within #inputfield {
   border-color: var(--fpc-green);
   box-shadow: 0 0 0 2px var(--fpc-green); /* Replace outline with box-shadow */
   -webkit-appearance: none;
+  appearance: auto;
 }
 
 #inputfield-container:focus-within .autocomplete-panel {
